<resources>
    <string name="app_name">Rooted &amp; Device Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dashboard -->
    <string name="access_info">Access Device Information</string>

    <!-- RootChecker Fragment -->
    <string name="verify_status">Verify Device Status</string>
    <string name="device_name">Device Name:</string>
    <string name="android_version">Android version:</string>
    <string name="device_is_rooted">Device is Rooted (Not Safe)</string>
    <string name="device_is_not_rooted">Your Device is Safe</string>
    <string name="check">Check</string>
    <string name="checking">Checking…</string>

    <!-- Quote Fragment -->
    <string name="daily_quotes">Daily Quotes</string>
    <string name="new_txt">New</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="fetching">fetching…</string>

    <!-- Internet Availability Messages -->
    <string name="no_internet">No internet check your data connection Cutie :)</string>
    <string name="internet_available">Internet is available now ;)</string>

    <!-- Network Detail Fragment -->
    <string name="network_txt">Network</string>
    <string name="bytes_txt">Bytes</string>
    <string name="kbps_txt">KBPs</string>
    <string name="mbps_txt">MBPs</string>
    <string name="gbps_txt">GBPs</string>
</resources>