<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="220sp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="20sp">

    <LinearLayout
        style="@style/Device"
        android:layout_width="0sp"
        android:layout_height="160sp"
        android:layout_weight="3">

    </LinearLayout>

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_weight="7"
        android:orientation="vertical">

        <!-- Device Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deviceNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Android Version -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_version"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/androidVersionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Root Checker -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rootStatusTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_is_not_rooted"
                android:textColor="@android:color/holo_green_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/checkForRootedBtn"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_marginTop="5sp"
                android:text="@string/check"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>