<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="17sp">

    <LinearLayout
        android:id="@+id/quoteCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:background="@drawable/card_bg"
        android:elevation="5sp"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_quotes"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/quoteLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/quoteTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/autherTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="end"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <View
                android:layout_width="100sp"
                android:layout_height="0.2sp"
                android:layout_gravity="end"
                android:layout_marginTop="5sp"
                android:background="@android:color/darker_gray"
                android:elevation="3sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="0sp"
                    android:layout_height="40sp"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/copyBtn"
                    android:layout_width="0sp"
                    android:layout_height="40sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:text="@string/copy"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/newBtn"
                    android:layout_width="0sp"
                    android:layout_height="40sp"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:text="@string/new_txt"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>